--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "jquery.maskedinput": "~1.4.1",
     "respond": "~1.4.2",
     "REM-unit-polyfill": "~1.3.4",
-    "foundation-sites": "~6.2.1"
+    "foundation-sites": "~6.2.1",
+    "angular-ui-router": "^0.3.0"
   }
 }
